Use cloudnative postgresql

--- a/domains/auth/chart/templates/api-deployment.yaml
+++ b/domains/auth/chart/templates/api-deployment.yaml
@@ -53,8 +53,12 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
-          {{- if .Values.api.env}}
           env:
+            - name: Database__Name
+              value: auth-database
+            - name: Database__User
+              value: auth
+          {{- if .Values.api.env}}
           {{- range $name, $value := .Values.api.env }}
             - name: {{ $name }}
               value: {{ $value | quote }}
