--- a/domains/auth/chart/templates/api-init-db-cm.yaml
+++ b/domains/auth/chart/templates/api-init-db-cm.yaml
@@ -8,6 +8,11 @@ metadata:
 data:
   run.sh: |
     pg_isready -U ${PGUSER:-postgres} -h ${PGHOST:-localhost} -p ${PGPORT:-5432}
-    psql ${PGNAME:-postgres} -U ${PGUSER:-postgres} -p ${PGPORT:-5432} -h ${PGHOST:-localhost} -f /sql/API.migrations.sql
+    cat /sql/API.migrations.sql /sql/API.grants.sql | psql auth-database -U ${PGUSER:-postgres} -p ${PGPORT:-5432} -h ${PGHOST:-localhost} -f -
   API.migrations.sql: |-
 {{ .Files.Get "API.migrations.sql" | indent 4 }}
+  API.grants.sql: |
+    START TRANSACTION;
+    REVOKE ALL ON ALL TABLES IN SCHEMA public FROM auth;
+    GRANT SELECT, INSERT, UPDATE, DELETE ON ALL TABLES IN SCHEMA public TO auth;
+    COMMIT;
