--- a/domains/auth/chart/values.yaml
+++ b/domains/auth/chart/values.yaml
@@ -1,13 +1,11 @@
 api:
-  replicaCount: 2
+  replicaCount: 3
   image: {}
   env:
     Cryptography__Key:
     Terms__CurrentVersion:
     Database__Host:
     Database__Port: 5432
-    Database__Name: postgres
-    Database__User: postgres
     Database__Password:
     Token__Issuer:
     Token__Audience:
@@ -25,5 +23,11 @@ api:
       PGHOST:
       PGUSER: postgres
       PGPASSWORD:
-      PGNAME: postgres
       PGPORT: 5432
+cnpg:
+  cluster:
+    replicaCount:
+    imageVersion:
+    storageSize:
+  bouncer:
+    replicaCount:
