--- a/domains/auth/chart/templates/api-deployment.yaml
+++ b/domains/auth/chart/templates/api-deployment.yaml
@@ -58,6 +58,8 @@ spec:
               value: auth-database
             - name: Database__User
               value: auth
+            - name: Database__Host
+              value: {{ .Release.Name }}-cnpg-cluster-rw
           {{- if .Values.api.env}}
           {{- range $name, $value := .Values.api.env }}
             - name: {{ $name }}
