--- a/domains/auth/chart/templates/api-init-db-cm.yaml
+++ b/domains/auth/chart/templates/api-init-db-cm.yaml
@@ -7,8 +7,8 @@ metadata:
     internal.config.kubernetes.io/needsHashSuffix: enabled
 data:
   run.sh: |
-    pg_isready -U ${PGUSER:-postgres} -h ${PGHOST:-localhost} -p ${PGPORT:-5432}
-    cat /sql/API.migrations.sql /sql/API.grants.sql | psql auth-database -U ${PGUSER:-postgres} -p ${PGPORT:-5432} -h ${PGHOST:-localhost} -f -
+    pg_isready -U ${PGUSER:-postgres} -h {{ .Release.Name }}-cnpg-cluster-rw -p 5432
+    cat /sql/API.migrations.sql /sql/API.grants.sql | psql auth-database -U ${PGUSER:-postgres} -p 5432 -h {{ .Release.Name }}-cnpg-cluster-rw -f -
   API.migrations.sql: |-
 {{ .Files.Get "API.migrations.sql" | indent 4 }}
   API.grants.sql: |
