--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -11,7 +11,7 @@
     "Database:Name": "postgres",
     "Database:User": "admin",
     "Database:Password": "admin",
-    "DataSync:Uri": "http://eo-data-sync",
+    //"DataSync:Uri": "http://eo-data-sync",
     "Terms:CurrentVersion": "5",
     "Token:Issuer": "Us",
     "Token:Audience": "Users",
