--- a/domains/auth/chart/values.yaml
+++ b/domains/auth/chart/values.yaml
@@ -1,13 +1,10 @@
 api:
-  replicaCount: 2
+  replicaCount: 3
   image: {}
   env:
     Cryptography__Key:
     Terms__CurrentVersion:
-    Database__Host:
     Database__Port: 5432
-    Database__Name: postgres
-    Database__User: postgres
     Database__Password:
     Token__Issuer:
     Token__Audience:
@@ -22,8 +19,12 @@ api:
     Oidc__FrontendRedirectUri:
   setup:
     database:
-      PGHOST:
-      PGUSER: postgres
+      PGUSER:
       PGPASSWORD:
-      PGNAME: postgres
-      PGPORT: 5432
+cnpg:
+  cluster:
+    replicaCount:
+    imageVersion:
+    storageSize:
+  bouncer:
+    replicaCount:
