Rename to IntegrationTests

--- a/domains/certificates/Query.API/API/API.csproj
+++ b/domains/certificates/Query.API/API/API.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="API.AppTests" />
+    <InternalsVisibleTo Include="API.IntegrationTests" />
   </ItemGroup>
 
   <ItemGroup>
