--- a/domains/certificates/Query.API/API.IntegrationTests/API.IntegrationTests.csproj
+++ b/domains/certificates/Query.API/API.IntegrationTests/API.IntegrationTests.csproj
@@ -8,6 +8,10 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="$(CI) == true">
+    <DefineConstants>CI</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.4" />
