--- a/domains/certificates/chart/templates/postgres-statefulset.yaml
+++ b/domains/certificates/chart/templates/postgres-statefulset.yaml
@@ -49,7 +49,7 @@ spec:
           volumeMounts:
             - name: dshm
               mountPath: /dev/shm
-            - name: pgdata
+            - name: data
               mountPath: /var/lib/postgresql/data
             - name: postgres-vm
               mountPath: /docker-entrypoint-initdb.d/
@@ -63,7 +63,7 @@ spec:
             name: postgres-init-cm
   volumeClaimTemplates:
     - metadata:
-        name: pgdata
+        name: data
       spec:
         accessModes:
           - "ReadWriteOnce"
