--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 **/Chart.lock
 .idea.*/
 *.received.txt
-
+*.idea
 # Created by https://www.toptal.com/developers/gitignore/api/helm,rider,linux,macos,python,csharp,windows,visualstudio,visualstudiocode,jetbrains
 # Edit at https://www.toptal.com/developers/gitignore?templates=helm,rider,linux,macos,python,csharp,windows,visualstudio,visualstudiocode,jetbrains
 
