--- a/domains/certificates/chart/templates/api-service.yaml
+++ b/domains/certificates/chart/templates/api-service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: {{ .Release.Name }}-api
   namespace: {{ .Release.Namespace }}
+  labels:
+    app: {{ .Release.Name }}-api
 spec:
   ports:
     - name: http
