--- a/domains/certificates/chart/templates/service-monitor.yaml
+++ b/domains/certificates/chart/templates/service-monitor.yaml
@@ -1,9 +1,12 @@
+{{- if .Values.metrics.prometheus.enabled -}}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ .Release.Name }}-service-monitor
+  {{- if .Values.metrics.prometheus.serviceMonitorReleaseLabel -}}
   labels:
-    release: {{ .Values.metrics.serviceMonitorReleaseLabel }}
+    release: {{ .Values.metrics.prometheus.serviceMonitorReleaseLabel }}
+  {{- end -}}
 spec:
   endpoints:
     - port: http
@@ -12,3 +15,4 @@ spec:
   selector:
     matchLabels:
       app: {{ .Release.Name }}-api
+{{- end -}}
