--- a/domains/certificates/docker-test-env/prometheus.yaml
+++ b/domains/certificates/docker-test-env/prometheus.yaml
@@ -3,12 +3,19 @@ global:
   evaluation_interval: 10s
 
 scrape_configs:
-  - job_name: "Certificates.api.Metrics"
+  - job_name: "certificates-api"
     scheme: https
     tls_config:
       insecure_skip_verify: true
     static_configs:
     - targets: ["host.docker.internal:7277"]
+
+  - job_name: "certificates-registryconnector"
+    scheme: https
+    tls_config:
+      insecure_skip_verify: true
+    static_configs:
+    - targets: ["host.docker.internal:7061"]
 
   - job_name: "Prometheus"
     static_configs:
