add service to helm chart

--- a/domains/certificates/chart/templates/service-monitor.yaml
+++ b/domains/certificates/chart/templates/service-monitor.yaml
@@ -13,6 +13,6 @@ spec:
       interval: 15s
       scrapeTimeout: 14s
   selector:
-    matchLabels:
-      app: {{ .Release.Name }}-api
+    matchExpressions:
+      - {key: app, operator: In, values: [{{ .Release.Name }}-api, {{ .Release.Name }}-registry-connector]}
 {{- end -}}
