--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -33,5 +33,12 @@
         "MitID_Professional",
         "NemID_Private",
         "NemID_Professional"
-    ]
+    ],
+    "Serilog": {
+        "WriteTo": [
+            {
+                "Name": "Console"
+            }
+        ]
+    }
 }
