--- a/.editorconfig
+++ b/.editorconfig
@@ -22,6 +22,7 @@ indent_style = space
 indent_size = 4
 indent_style = space
 
+
 # New line preferences
 csharp_new_line_before_open_brace = all
 csharp_new_line_before_else = true
@@ -30,6 +31,7 @@ csharp_new_line_before_finally = true
 csharp_new_line_before_members_in_object_initializers = false
 csharp_new_line_before_members_in_anonymous_types = false
 csharp_new_line_between_query_expression_clauses = true
+max_line_length = 999
 
 # Indentation preferences
 csharp_indent_block_contents = true
@@ -82,6 +84,7 @@ csharp_prefer_simple_using_statement = true:warning
 csharp_style_prefer_switch_expression = true:suggestion
 dotnet_style_readonly_field = true:suggestion
 dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
+csharp_braces_for_ifelse = required
 
 # Expression-level preferences
 dotnet_style_object_initializer = true:suggestion
@@ -120,6 +123,8 @@ csharp_style_conditional_delegate_call = true:suggestion
 csharp_style_prefer_index_operator = false:none
 csharp_style_prefer_range_operator = false:none
 csharp_style_pattern_local_over_anonymous_function = false:none
+dotnet_diagnostic.IDE0047.severity = warning
+dotnet_diagnostic.IDE0048.severity = warning
 
 # Space preferences
 csharp_space_after_cast = false
