--- a/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
+	<GenerateDocumentationFile>True</GenerateDocumentationFile>
+	<DocumentationFile>documentation.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +15,12 @@
 	<PackageReference Include="Serilog.Enrichers.Span" Version="3.1.0" />
 	<PackageReference Include="Serilog.Expressions" Version="3.4.1" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<None Update="documentation.xml">
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
