--- a/domains/auth/Auth.API/API/appsettings.json
+++ b/domains/auth/Auth.API/API/appsettings.json
@@ -5,23 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "Serilog": {
-        "Using": [
-            "Serilog.Expressions",
-            "Serilog.Sinks.Console"
-        ],
-        "WriteTo": [],
-        "Enrich": [
-            "WithSpan"
-        ],
-        "Filter": [
-            {
-                "Name": "ByExcluding",
-                "Args": {
-                    "expression": "RequestPath like '/healthz%'"
-                }
-            }
-        ]
-    }
+    "AllowedHosts": "*"
 }
