--- a/domains/measurements/Measurements.API/API/API.csproj
+++ b/domains/measurements/Measurements.API/API/API.csproj
@@ -16,7 +16,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.27.0" />
     <PackageReference Include="EnergyOriginAuthorization" Version="1.1.2" />
-    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+		<PackageReference Include="Serilog.Enrichers.Span" Version="3.1.0" />
+		<PackageReference Include="Serilog.Expressions" Version="3.4.1" />
   </ItemGroup>
 
 </Project>
