--- a/domains/transfer-agreements/.devcontainer/Dockerfile
+++ b/domains/transfer-agreements/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
-FROM mcr.microsoft.com/vscode/devcontainers/dotnet:6.0-bullseye
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 
 HEALTHCHECK CMD curl --fail http://localhost:8080/health || exit 1
