--- a/domains/certificates/RegistryConnector/Worker/Worker.csproj
+++ b/domains/certificates/RegistryConnector/Worker/Worker.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\CertificateEvents\CertificateEvents.csproj" />
     <ProjectReference Include="..\..\Shared\Contracts\Contracts.csproj" />
   </ItemGroup>
 
