Added details to development json file.

--- a/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
+++ b/domains/transfer-agreements/TransferAgreements.API/API/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+    "Database": {
+        "Host": "localhost",
+        "Port": "5432",
+        "Name": "Database",
+        "User": "postgres",
+        "Password": "postgres"
+    }
 }
