Fixed some namespaces

--- a/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API/API.csproj
@@ -44,4 +44,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="ApiModels\Responses\TransferAgreementResponse.cs" />
+  </ItemGroup>
+
 </Project>
