--- a/.github/workflows/sonar-analysis-ignore.yml
+++ b/.github/workflows/sonar-analysis-ignore.yml
@@ -1,8 +1,6 @@
 name: SonarCloud
 on:
-  workflow_call:
-    paths-ignore:
-      - domains/certificates/**
+  workflow_call: {}
 jobs:
   sonar-analysis:
     name: sonar-analysis
