--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -1,9 +1,7 @@
 name: SonarCloud
 
 on:
-  workflow_call:
-    paths:
-      - domains/certificates/**
+  workflow_call: {}
 
 env:
   ORGANIZATION: "energinet-datahub"
