--- a/.github/workflows/ci-orchestrator.yml
+++ b/.github/workflows/ci-orchestrator.yml
@@ -23,6 +23,13 @@ on:
 
 jobs:
 
+  Run-sonar:
+    uses: dorny/paths-filter@v2
+    with:
+      filters: |
+          certificates:
+           - 'domains/certificates/**'
+
   build-domain:
     uses: ./.github/workflows/build-domain.yaml
     secrets: inherit
@@ -40,10 +47,14 @@ jobs:
     secrets: inherit
 
   sonar-analysis:
+    needs: Run-sonar
+    if: ${{ needs.Run-sonar.outputs.certificates == 'true' }}
     uses: ./.github/workflows/sonar-analysis.yml
     secrets: inherit
 
   sonar-analysis-ignore:
+    needs: Run-sonar
+    if: ${{ needs.Run-sonar.outputs.certificates == 'false' }}
     uses: ./.github/workflows/sonar-analysis-ignore.yml
     secrets: inherit
 
