add migration sql + cm

--- a/domains/transfer-agreements/chart/templates/cnpg-cluster.yaml
+++ b/domains/transfer-agreements/chart/templates/cnpg-cluster.yaml
@@ -8,7 +8,7 @@ spec:
 
   bootstrap:
     initdb:
-      database: transfer-agreements-database
+      database: transfer-database
       owner: transfer
 
   storage:
