--- a/.github/workflows/ci-orchestrator.yml
+++ b/.github/workflows/ci-orchestrator.yml
@@ -9,19 +9,16 @@ on:
       - main
 
 jobs:
-
-  Run-sonar:
+  run-sonar:
     runs-on: ubuntu-latest
     outputs:
-      certificates_output: ${{ steps.dorny.outputs.certificates }}
+      boolean: ${{ steps.diff.outputs.matches }}
     steps:
-    - name: sonar
-      uses: dorny/paths-filter@v2
-      id: dorny
-      with:
-        filters: |
-          certificates:
-            - 'domains/certificates/**'
+      - name: sonar
+        uses: CodeReaper/find-diff-action@v2
+        id: diff
+        with:
+          path: domains/certificates/**
 
   build-domain:
     uses: ./.github/workflows/build-domain.yaml
@@ -40,19 +37,18 @@ jobs:
     secrets: inherit
 
   sonar-analysis:
-    needs: Run-sonar
-    if: needs.Run-sonar.outputs.certificates_output == 'true'
+    needs: run-sonar
+    if: needs.run-sonar.outputs.boolean == 'true'
     uses: ./.github/workflows/sonar-analysis.yml
     secrets: inherit
 
   sonar-analysis-ignore:
-    needs: Run-sonar
-    if: needs.Run-sonar.outputs.certificates_output == 'false'
+    needs: run-sonar
+    if: needs.run-sonar.outputs.boolean == 'false'
     uses: ./.github/workflows/sonar-analysis-ignore.yml
     secrets: inherit
 
-
-  allow_merge_ci_orchestrator:
+  allow-merge-ci-orchestrator:
     runs-on: ubuntu-latest
     needs:
       [
@@ -63,13 +59,15 @@ jobs:
         sonar-analysis,
         sonar-analysis-ignore,
       ]
-    if: |
-      always()
+    if: always()
     steps:
+      - name: Print needs
+        run: |
+          echo '${{ toJSON(needs) }}'
       - name: Verify if merge is allowed
         run: |
-          echo "${{ toJSON(needs) }}"
-          if [[ ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }} = true ]]; then
+          verification=$(echo '${{ toJSON(needs) }}' | jq '.[] | select(.result != "success") | select(.result != "skipped")')
+          if [[ ! -z "$verification" ]]; then
               echo "Failed"
               exit 1
           fi
