--- a/.github/workflows/ci-orchestrator.yml
+++ b/.github/workflows/ci-orchestrator.yml
@@ -18,7 +18,7 @@ jobs:
         uses: CodeReaper/find-diff-action@v2
         id: diff
         with:
-          path: domains/certificates/**
+          paths: domains/certificates/**
 
   build-domain:
     uses: ./.github/workflows/build-domain.yaml
