--- a/.github/workflows/ci-orchestrator.yml
+++ b/.github/workflows/ci-orchestrator.yml
@@ -14,6 +14,9 @@ jobs:
     outputs:
       boolean: ${{ steps.diff.outputs.matches }}
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: sonar
         uses: CodeReaper/find-diff-action@v2
         id: diff
