--- a/domains/transfer-agreements/chart/templates/api-deployment.yaml
+++ b/domains/transfer-agreements/chart/templates/api-deployment.yaml
@@ -19,6 +19,26 @@ spec:
         - name: migrations
           configMap:
             name: {{ .Release.Name }}-api-init-db-cm
+      initContainers:
+        - name: {{ .Release.Name }}-api-init-db
+          image: postgres:alpine3.17
+          command:
+            - /bin/sh
+          args:
+            - -e
+            - /sql/run.sh
+          env:
+            - name: PGUSER
+              value: $(username)
+            - name: PGPASSWORD
+              value: $(password)
+          envFrom:
+            - secretRef:
+              name: {{ .Release.Name }}-cnpg-cluster-superuser
+          volumeMounts:
+            - name: migrations
+              mountPath: /sql
+              readOnly: true
       containers:
         - name: {{ .Release.Name }}-api
           image: '{{ .Values.api.image.name }}:{{ .Values.api.image.tag }}'
