--- a/.github/actions/yaml-get/action.yaml
+++ b/.github/actions/yaml-get/action.yaml
@@ -17,10 +17,7 @@ outputs:
 runs:
   using: composite
   steps:
-    - name: install yamlpath
-      uses: Energinet-DataHub/energy-origin/.github/actions/yamlpath-install@main
-
-    - name: Run yaml get
+    - name: Read vaule
       id: get
       shell: bash
-      run: echo "result=$(yaml-get --query ${{ inputs.yaml_path }} ${{ inputs.yaml_file }})" >> $GITHUB_OUTPUT
+      run: echo "result=$(yq '.${{ inputs.yaml_path }}' < '${{ inputs.yaml_file }}')" >> $GITHUB_OUTPUT
