--- a/.github/actions/yaml-check-incremented-version/action.yaml
+++ b/.github/actions/yaml-check-incremented-version/action.yaml
@@ -20,16 +20,16 @@ runs:
   using: composite
 
   steps:
-    - name: Checkout main
-      uses: actions/checkout@v3
-      with:
-        ref: main
-        fetch-depth: 0
-
     - name: Get previous tag
       id: previous-tag
       shell: bash
-      run: echo "result=$(yq '.${{ inputs.base-yaml-path || inputs.yaml-path }}' '${{ inputs.base-yaml-file || inputs.yaml-file }}')" >> $GITHUB_OUTPUT
+      run: |
+        gh api repos/${{ github.repository }}/contents/${{ inputs.base-yaml-file || inputs.yaml-file }}?ref=main > main || exit 0
+        jq -r '.download_url' main > url || exit 0
+        cat url | xargs curl --silent > raw || exit 0
+        yq '.${{ inputs.base-yaml-path || inputs.yaml-path }}' raw > /dev/null || exit 0
+        version=$(yq '.${{ inputs.base-yaml-path || inputs.yaml-path }}')
+        echo "result=$version" >> $GITHUB_OUTPUT
 
     - name: Verify previous tag
       shell: bash
@@ -37,15 +37,18 @@ runs:
         echo '${{ steps.previous-tag.outputs.result }}' | grep -qEe '^[0-9]+\.[0-9]+\.[0-9]+(-[^-]+-[^-]+)?$'
         [ $? -eq 0 ] || { echo '::notice::Invalid version on main - accepting old versions to be invalid since new versions are checked for validity'; }
 
-    - name: Checkout branch
-      uses: actions/checkout@v3
-      with:
-        ref: ${{ github.head_ref }}
-
     - name: Get current tag
       id: current-tag
       shell: bash
-      run: echo "result=$(yq '.${{ inputs.yaml-path }}' '${{ inputs.yaml-file }}')" >> $GITHUB_OUTPUT
+      run: |
+        set -euxo pipefail
+
+        version=$(gh api repos/${{ github.repository }}/contents/${{ inputs.yaml-file }}?ref=${{ github.head_ref }} | \
+          jq -r '.download_url' | \
+          xargs curl --silent | \
+          yq '.${{ inputs.yaml-path }}')
+
+        echo "result=$version" >> $GITHUB_OUTPUT
 
     - name: Verify current tag
       shell: bash
@@ -54,7 +57,6 @@ runs:
         [ $? -eq 0 ] || { echo '::warning::Invalid version'; exit 1; }
 
     - name: Verify incremented version
-      if: ${{ steps.is-prev-tag-valid.outcome == 'success' }}
       shell: bash
       env:
         previous: ${{ steps.previous-tag.outputs.result }}
