--- a/domains/auth/Auth.API/API/API.csproj
+++ b/domains/auth/Auth.API/API/API.csproj
@@ -18,6 +18,7 @@
 		</PackageReference>
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
 		<PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.4.0" />
+		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.4.0" />
 		<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.4.0-rc.4" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.1.0-rc.2" />
 		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
