--- a/domains/auth/docker-environment/prometheus.yaml
+++ b/domains/auth/docker-environment/prometheus.yaml
@@ -1,15 +1,32 @@
+#global:
+#  scrape_interval: 1s
+#  evaluation_interval: 1s
+#
+#scrape_configs:
+#  - job_name: "Auth.Metrics"
+#    scheme: https
+#    tls_config:
+#      insecure_skip_verify: true
+#    static_configs:
+#    - targets: ["host.docker.internal:7297"]
+#
+#  - job_name: "Prometheus"
+#    static_configs:
+#    - targets: [localhost:9090]
+
+
+
+
 global:
   scrape_interval: 1s
-  evaluation_interval: 1s
+#  evaluation_interval: 30s
 
 scrape_configs:
-  - job_name: "Auth.Metrics"
-    scheme: https
-    tls_config:
-      insecure_skip_verify: true
-    static_configs:
-    - targets: ["host.docker.internal:7297"]
-    
-  - job_name: "Prometheus"
-    static_configs:
-    - targets: [localhost:9090]
+  - job_name: 'collector'
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+    static_configs: # These are the endpoints Prometheus will try to scrape metrics from.
+#      - targets: ['prometheus:9090'] # This will scrape Prometheus UI metrics.
+#      - targets: ['collector:8889'] (?)
+#      - targets: ['collector:8888'] (?)
+      - targets: ['collector:9464'] # This should match the exposed endpoint in the Prometheus exporter OTEL config.
